# meering-hero

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: ADR.md  PRD.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/audio/: capture.rs  mod.rs  resampler.rs  vad.rs
src-tauri/src/commands/: audio.rs  export.rs  mod.rs  model.rs  recording.rs  session.rs  settings.rs  summary.rs
src-tauri/src/export/: dooray.rs  mod.rs  renderer.rs
src-tauri/src/llm/: claude_cli.rs  mod.rs  templates.rs
src-tauri/src/model/: manager.rs
src-tauri/src/session/: manager.rs  storage.rs
src-tauri/src/stt/: engine.rs  mod.rs  pipeline.rs  postprocess.rs
src/components/: DoorayExportDialog.tsx  NewSessionDialog.tsx  RecordingControls.tsx  ResizeHandle.tsx
src/components/LiveTranscript/: LiveTranscript.tsx  TranscriptLine.tsx
src/components/NoteEditor/: NoteEditor.tsx
src/components/SessionList/: SessionList.tsx
src/components/Settings/: Settings.tsx
src/components/SummaryPanel/: SummaryPanel.tsx
src/hooks/: useSession.ts  useTranscript.ts
src/lib/: tauri-commands.ts
userdocs/: Architecture.md  ContributionGuide.md
