[package]
name = "meering-hero"
version = "0.1.0"
edition = "2021"

[lib]
name = "meering_hero_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
cpal = "0.15"
ringbuf = "0.4"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
whisper-rs = { version = "0.16", features = ["coreml"] }
sysinfo = "0.35"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.0"
